crates/check_cli/tests/snapshots/main_commands_format/format_svelte_ts_files_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.svelte`

```svelte
<script setup lang="ts">
import { type something } from "file.svelte";
const hello: string = "world";
</script>
<div></div>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
