crates/check_cli/tests/snapshots/main_commands_format/formatter_fix.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `format.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
