crates/check_cli/tests/snapshots/main_commands_format/html_disabled_by_default.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.html`

```html
<!DOCTYPE HTML>
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - file.html
  


```

# Emitted Messages

```block
Formatted 0 files in <TIME>. No fixes applied.
```
