crates/check_cli/tests/snapshots/main_commands_format/ignores_unknown_file.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `test.js`

```js
console.log('bar');

```

## `test.txt`

```txt
content
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - console.log('bar');
      1 │ + console.log("bar");
    2 2 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
