crates/check_cli/tests/snapshots/main_commands_format/include_ignore_cascade.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "files": {
    "includes": ["file1.js", "file2.js", "file3.js", "!file2.js"]
  },
  "formatter": {
    "includes": ["file1.js", "file2.js", "!file3.js"]
  }
}
```

## `file1.js`

```js
statement();

```

## `file2.js`

```js
  statement(  )  
```

## `file3.js`

```js
  statement(  )  
```

## `file4.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
